Fix result alignment; Format carbs data

--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ body {
 
 #searchResultContainer {
   /*border: black .05em solid;*/
-  width: 90%;
+  /*width: 90%;*/
   border-radius: .1em;
   padding: .1em;
   margin: 0.5em;
